--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   provider: ^6.0.4
+  just_audio: ^0.9.30
+  rxdart: ^0.27.7
+  
 
 dev_dependencies:
   flutter_test:
